# versevault-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  file_list_gen.cmake  ui_hello_world_gen.c  ui_hello_world_gen.h
preview-bin/: lved-runtime.js  lved-runtime.wasm
screens/: hello_world.xml  hello_world_gen.c  hello_world_gen.h
src/app/: database_config.h
src/platform/esp32s3/: bsp_config.h  main.c
src/platform/simulator/: bsp_config.h  display_simulator.c  display_simulator.h  main.c
src/ui/: .gitignore  file_list_gen.cmake  project.xml  ui_versevault.c  ui_versevault.h  ui_versevault_gen.c  ui_versevault_gen.h
src/ui/components/button/: button_gen.c
src/ui/components/column/: column_gen.c
src/ui/components/demo/: demo.xml  demo_gen.c  demo_gen.h
src/ui/components/row/: row_gen.c
src/ui/preview-bin/: index.html  lved-runtime.js
src/view/: demo_view.c  demo_view.h
